Fix refresh button positioning on mobile

--- a/style.css
+++ b/style.css
@@ -184,6 +184,7 @@ nav ul {
 nav li {
   background-color: rgb(39, 39, 39);
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.555);
+  border: 1px solid white;
   color: white;
   cursor: pointer;
   display: inline-block;
@@ -744,6 +745,10 @@ body {
   }
 
   .🌭{
+    right: 0;
+  }
+
+  .💩{
     right: 0;
   }
 
